# RewireSpace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  example_rewiring.ipynb  plot_rewiring.py  pyproject.toml  spatial_rewiring.py
.github/workflows/: ci.yml
examples/: example_rewiring.ipynb  rrmap_rewiring.ipynb
src/rewirespace/: __init__.py  plot_rewiring.py  spatial_rewiring.py
tests/: test_plot_rewiring.py  test_spatial_rewiring.py
