[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rewirespace"
version = "0.1.0"
description = "Neighbor-matrix-centric graph rewiring analysis over disease course for spatial omics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "RewireSpace Contributors" }
]
requires-python = ">=3.10"
dependencies = [
  "anndata>=0.9",
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "statsmodels>=0.14",
  "tqdm>=4.64",
]
keywords = ["spatial-omics", "anndata", "graph", "rewiring", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "nbformat>=5.10",
]

[project.urls]
Homepage = "https://github.com/your-org/RewireSpace"
Repository = "https://github.com/your-org/RewireSpace"
Issues = "https://github.com/your-org/RewireSpace/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rewirespace"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
